--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,10 +1,10 @@
 :root {
-    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    --animation-duration: 250ms;
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --animation-duration: 250ms;
 }
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
 p,
@@ -14,110 +14,207 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0;
+  margin: 0;
 }
 
 ul {
-    margin: 0;
-    padding-left: 0;
+  margin: 0;
+  padding-left: 0;
 }
 
 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: "Roboto", sans-serif;
-    letter-spacing: 0.03em;
-    color: var(--main-title-color);
-    background-color: var(--main-background-color);
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 0.03em;
+  background-color: #eceff1;
+}
+
+.container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+    padding: 0 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+    padding: 0 10px;
+  }
 }
 
 .search-form {
-display: flex;
-justify-content: center;
-margin-bottom: 30px;
-margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  background-color: rgb(72, 72, 214);
+  padding-bottom: 7px;
+  padding-top: 7px;
+  margin-bottom: 15px;
+  font-size: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .search-form {
+    padding-bottom: 10px;
+    padding-top: 10px;
+  }
+}
+
+.search-form > input {
+  width: 200px;
+  padding: 7px;
+  margin-right: 2px;
+  border-radius: 5px;
+}
+
+@media screen and (min-width: 768px) {
+  .search-form > input {
+    width: 350px;
+    padding: 10px;
+    margin-right: 5px;
+  }
+}
+
+.search-form > button {
+  border-radius: 5px;
+  width: 40px;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .search-form > button {
+    width: 60px;
+  }
+}
+
+.search-form > button:hover .search-form-icon,
+.search-form > button:focus .search-form-icon {
+  fill: rgb(63, 63, 189);
+}
+
+.search-form-icon {
+  width: 15px;
+  height: 15px;
+  transition: fill var(--animation-duration) var(--timing-function);
+}
+
+@media screen and (min-width: 768px) {
+  .search-form-icon {
+    width: 20px;
+    height: 20px;
+  }
 }
 
 .gallery {
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
-gap:15px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
 
 .photo-card {
-width: calc((100% - 200px) / 4);
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  border-radius: 5px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+  transition: transform var(--animation-duration) var(--timing-function);
+}
+
+@media screen and (min-width: 768px) {
+  .photo-card {
+    flex-basis: calc((100% - 20px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .photo-card {
+    flex-basis: calc((100% - 60px) / 4);
+  }
 }
 
 .card-link {
-    display: block;
-    margin-bottom: 30px;
+  display: block;
+  flex-grow: 1;
+  overflow: hidden;
 }
 
 .info {
-    flex-grow: 1;
-display: flex;
-
-/* gap: 20px; */
-justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 7px;
+  padding-right: 7px;
+  padding-bottom: 15px;
+  padding-top: 20px;
 }
 
 .info-item {
-display: flex;
-flex-direction: column;
-align-items: center;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
 }
 
+.info-icon {
+  fill: rgba(77, 73, 73, 0.85);
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  margin-right: 3px;
+}
 
 .load-more {
-    display: block;
-    padding: 10 30;
-    margin: 30 auto;
+  display: block;
+  padding: 11px 35px;
+  margin: 30px auto;
+  cursor: pointer;
+
+  font-family: inherit;
+  font-size: 15px;
+  border-radius: 5px;
+  border: 1px solid #fff;
+
+  background-color: rgb(72, 72, 214);
+  color: #fff;
+  transition: transform var(--animation-duration) var(--timing-function),
+    border-radius var(--animation-duration) var(--timing-function);
+}
+
+.load-more:hover,
+.load-more:focus {
+  border-radius: 10px;
+  transform: scale(1.05);
 }
 
 .hidden {
-    display: none;
-}
-
-/* .gallery {
-    display: grid;
-    max-width: 1140px;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    grid-auto-rows: 240px;
-    grid-gap: 12px;
-    justify-content: center;
-    padding: 0;
-    list-style: none;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.gallery__item {
-    position: relative;
-    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
-        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+  display: none;
 }
 
 .photo-card:hover {
-    transform: scale(1.03);
+  transform: scale(1.03);
 }
-
-
-
-a {
-    display: block;
-    text-decoration: none;
-    height: 100%;
-}
-
-.gallery__link:hover {
-    cursor: zoom-in;
-} */
