--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,14 +22,15 @@ ul {
   padding-left: 0;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 img {
   display: block;
   max-width: 100%;
-  height: auto;
-}
-
-* {
-  box-sizing: border-box;
+  height: 100%;
+  object-fit: cover;
 }
 
 body {
