--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,7 @@
 :root {
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   --animation-duration: 250ms;
+  --loader-color: rgb(72, 72, 214);
 }
 
 body {
@@ -200,7 +201,7 @@ body {
 .load-more {
   display: block;
   padding: 11px 35px;
-  margin: 30px auto;
+  margin: 30px auto 50px;
   cursor: pointer;
 
   font-family: inherit;
@@ -265,4 +266,100 @@ body {
 
 .hidden {
   display: none;
+}
+
+/* ________________Loader_______________ */
+
+.loader {
+  margin: 100px auto;
+  font-size: 18px;
+  width: 23px;
+  height: 23px;
+  border-radius: 50%;
+  position: relative;
+  text-indent: -9999em;
+  -webkit-animation: load5 1.1s infinite ease;
+  animation: load5 1.1s infinite ease;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+}
+
+@-webkit-keyframes load5 {
+
+  0%,
+  100% {
+    box-shadow: 0em -2.6em 0em 0em #ffffff, 1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3), 2.5em 0em 0 0em rgba(72, 72, 214, 0.3), 1.75em 1.75em 0 0em rgba(72, 72, 214, 0.3), 0em 2.5em 0 0em rgba(72, 72, 214, 0.3), -1.8em 1.8em 0 0em rgba(72, 72, 214, 0.3), -2.6em 0em 0 0em rgba(72, 72, 214, 0.6), -1.8em -1.8em 0 0em rgba(72, 72, 214, 0.8);
+  }
+
+  12.5% {
+    box-shadow: 0em -2.6em 0em 0em rgba(72, 72, 214, 0.8), 1.8em -1.8em 0 0em #ffffff, 2.5em 0em 0 0em rgba(72, 72, 214, 0.3), 1.75em 1.75em 0 0em rgba(72, 72, 214, 0.3), 0em 2.5em 0 0em rgba(72, 72, 214, 0.3), -1.8em 1.8em 0 0em rgba(72, 72, 214, 0.3), -2.6em 0em 0 0em rgba(72, 72, 214, 0.3), -1.8em -1.8em 0 0em rgba(72, 72, 214, 0.6);
+  }
+
+  25% {
+    box-shadow: 0em -2.6em 0em 0em rgba(72, 72, 214, 0.6), 1.8em -1.8em 0 0em rgba(72, 72, 214, 0.8), 2.5em 0em 0 0em #ffffff, 1.75em 1.75em 0 0em rgba(72, 72, 214, 0.3), 0em 2.5em 0 0em rgba(72, 72, 214, 0.3), -1.8em 1.8em 0 0em rgba(72, 72, 214, 0.3), -2.6em 0em 0 0em rgba(72, 72, 214, 0.3), -1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3);
+  }
+
+  37.5% {
+    box-shadow: 0em -2.6em 0em 0em rgba(72, 72, 214, 0.3), 1.8em -1.8em 0 0em rgba(72, 72, 214, 0.6), 2.5em 0em 0 0em rgba(72, 72, 214, 0.8), 1.75em 1.75em 0 0em #ffffff, 0em 2.5em 0 0em rgbargba(72, 72, 214, 0.3), -1.8em 1.8em 0 0em rgba(72, 72, 214, 0.3), -2.6em 0em 0 0em rgba(72, 72, 214, 0.3), -1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3);
+  }
+
+  50% {
+    box-shadow: 0em -2.6em 0em 0em rgba(72, 72, 214, 0.3), 1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3), 2.5em 0em 0 0em rgba(72, 72, 214, 0.6), 1.75em 1.75em 0 0em rgba(72, 72, 214, 0.8), 0em 2.5em 0 0em #ffffff, -1.8em 1.8em 0 0em rgba(72, 72, 214, 0.3), -2.6em 0em 0 0em rgba(72, 72, 214, 0.3), -1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3);
+  }
+
+  62.5% {
+    box-shadow: 0em -2.6em 0em 0em rgba(72, 72, 214, 0.3), 1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3), 2.5em 0em 0 0em rgba(72, 72, 214, 0.3), 1.75em 1.75em 0 0em rgba(72, 72, 214, 0.6), 0em 2.5em 0 0em rgba(72, 72, 214, 0.8), -1.8em 1.8em 0 0em #ffffff, -2.6em 0em 0 0em rgba(72, 72, 214, 0.3), -1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3);
+  }
+
+  75% {
+    box-shadow: 0em -2.6em 0em 0em rgba(72, 72, 214, 0.3), 1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3), 2.5em 0em 0 0em rgba(72, 72, 214, 0.3), 1.75em 1.75em 0 0em rgba(72, 72, 214, 0.3), 0em 2.5em 0 0em rgba(72, 72, 214, 0.6), -1.8em 1.8em 0 0em rgba(72, 72, 214, 0.8), -2.6em 0em 0 0em #ffffff, -1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3);
+  }
+
+  87.5% {
+    box-shadow: 0em -2.6em 0em 0em rgba(72, 72, 214, 0.3), 1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3), 2.5em 0em 0 0em rgba(72, 72, 214, 0.3), 1.75em 1.75em 0 0em rgba(72, 72, 214, 0.3), 0em 2.5em 0 0em rgba(72, 72, 214, 0.3), -1.8em 1.8em 0 0em rgba(72, 72, 214, 0.6), -2.6em 0em 0 0em rgba(72, 72, 214, 0.8), -1.8em -1.8em 0 0em #ffffff;
+  }
+}
+
+@keyframes load5 {
+
+  0%,
+  100% {
+    box-shadow: 0em -2.6em 0em 0em #ffffff, 1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3), 2.5em 0em 0 0em rgba(72, 72, 214, 0.3), 1.75em 1.75em 0 0em rgba(72, 72, 214, 0.3), 0em 2.5em 0 0em rgba(72, 72, 214, 0.3), -1.8em 1.8em 0 0em rgba(72, 72, 214, 0.3), -2.6em 0em 0 0em rgba(72, 72, 214, 0.6), -1.8em -1.8em 0 0em rgba(72, 72, 214, 0.8);
+  }
+
+  12.5% {
+    box-shadow: 0em -2.6em 0em 0em rgba(72, 72, 214, 0.8), 1.8em -1.8em 0 0em #ffffff, 2.5em 0em 0 0em rgba(72, 72, 214, 0.3), 1.75em 1.75em 0 0em rgba(72, 72, 214, 0.3), 0em 2.5em 0 0em rgba(72, 72, 214, 0.3), -1.8em 1.8em 0 0em rgba(72, 72, 214, 0.3), -2.6em 0em 0 0em rgba(72, 72, 214, 0.3), -1.8em -1.8em 0 0em rgba(72, 72, 214, 0.6);
+  }
+
+  25% {
+    box-shadow: 0em -2.6em 0em 0em rgba(72, 72, 214, 0.6), 1.8em -1.8em 0 0em rgba(72, 72, 214, 0.8), 2.5em 0em 0 0em #ffffff, 1.75em 1.75em 0 0em rgba(72, 72, 214, 0.3), 0em 2.5em 0 0em rgba(72, 72, 214, 0.3), -1.8em 1.8em 0 0em rgba(72, 72, 214, 0.3), -2.6em 0em 0 0em rgba(72, 72, 214, 0.3), -1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3);
+  }
+
+  37.5% {
+    box-shadow: 0em -2.6em 0em 0em rgba(72, 72, 214, 0.3), 1.8em -1.8em 0 0em rgba(72, 72, 214, 0.6), 2.5em 0em 0 0em rgba(72, 72, 214, 0.8), 1.75em 1.75em 0 0em #ffffff, 0em 2.5em 0 0em rgba(72, 72, 214, 0.3), -1.8em 1.8em 0 0em rgba(72, 72, 214, 0.3), -2.6em 0em 0 0em rgba(72, 72, 214, 0.3), -1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3);
+  }
+
+  50% {
+    box-shadow: 0em -2.6em 0em 0em rgba(72, 72, 214, 0.3), 1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3), 2.5em 0em 0 0em rgba(72, 72, 214, 0.6), 1.75em 1.75em 0 0em rgba(72, 72, 214, 0.8), 0em 2.5em 0 0em #ffffff, -1.8em 1.8em 0 0em rgba(72, 72, 214, 0.3), -2.6em 0em 0 0em rgba(72, 72, 214, 0.3), -1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3);
+  }
+
+  62.5% {
+    box-shadow: 0em -2.6em 0em 0em rgba(72, 72, 214, 0.3), 1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3), 2.5em 0em 0 0em rgba(72, 72, 214, 0.3), 1.75em 1.75em 0 0em rgba(72, 72, 214, 0.6), 0em 2.5em 0 0em rgba(72, 72, 214, 0.8), -1.8em 1.8em 0 0em #ffffff, -2.6em 0em 0 0em rgba(72, 72, 214, 0.3), -1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3);
+  }
+
+  75% {
+    box-shadow: 0em -2.6em 0em 0em rgba(72, 72, 214, 0.3), 1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3), 2.5em 0em 0 0em rgba(72, 72, 214, 0.3), 1.75em 1.75em 0 0em rgba(72, 72, 214, 0.3), 0em 2.5em 0 0em rgba(72, 72, 214, 0.6), -1.8em 1.8em 0 0em rgba(72, 72, 214, 0.8), -2.6em 0em 0 0em #ffffff, -1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3);
+  }
+
+  87.5% {
+    box-shadow: 0em -2.6em 0em 0em rgba(72, 72, 214, 0.3), 1.8em -1.8em 0 0em rgba(72, 72, 214, 0.3), 2.5em 0em 0 0em rgba(72, 72, 214, 0.3), 1.75em 1.75em 0 0em rgba(72, 72, 214, 0.3), 0em 2.5em 0 0em rgba(72, 72, 214, 0.3), -1.8em 1.8em 0 0em rgba(72, 72, 214, 0.6), -2.6em 0em 0 0em rgba(72, 72, 214, 0.8), -1.8em -1.8em 0 0em #ffffff;
+  }
+}
+
+.loader--small {
+  margin: 30px auto;
+  font-size: 7px;
+  width: 11px;
+  height: 11px;
 }
